--- a/app/src/main/res/layout/fragment_auth_login.xml
+++ b/app/src/main/res/layout/fragment_auth_login.xml
@@ -53,6 +53,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/AuthLoginEmail"
+                    android:inputType="textEmailAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
