--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,17 +20,32 @@
             android:layout_height="100dp"
             android:contentDescription="Profile Image"
             android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/img_profile" />
 
+        <ProgressBar
+            android:id="@+id/Profile_PfpLoading"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="10dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/Profile_pfp"
+            app:layout_constraintEnd_toEndOf="@+id/Profile_pfp"
+            app:layout_constraintStart_toStartOf="@+id/Profile_pfp"
+            app:layout_constraintTop_toTopOf="@+id/Profile_pfp" />
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/Profile_pfp"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Profile_pfp">
 
             <TextView
                 android:id="@+id/Profile_username"
@@ -38,6 +53,7 @@
                 android:layout_height="wrap_content"
                 android:maxLength="64"
                 android:text="Username"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -142,6 +158,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -176,16 +193,17 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/Profile_logout"
+        android:id="@+id/Profile_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/style_btn_danger_outline"
-        android:text="Logout"
+        android:layout_marginBottom="8dp"
+        android:background="#151515"
+        android:text="Settings"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
