--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,5 +9,12 @@
         <item name="android:navigationBarColor">@color/black</item>
     </style>
 
-    <style name="Theme.TeachMeTech" parent="Base.Theme.TeachMeTech" />
+    <style name="Theme.TeachMeTech" parent="Base.Theme.TeachMeTech">
+        <item name="android:windowBackground">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="buttonTint">@null</item>
+        <item name="android:navigationBarColor">@color/black</item>
+    </style>
 </resources>
