added : update user info
finally you can update name and aboutMe from settings section in profile

--- a/app/src/main/res/menu/settings_list.xml
+++ b/app/src/main/res/menu/settings_list.xml
@@ -5,16 +5,12 @@
         <menu>
             <item
                 android:id="@+id/item_settings_update_pfp"
-                android:icon="@drawable/img_right"
+                android:icon="@drawable/img_leftcorner"
                 android:title="Profile Photo" />
             <item
-                android:id="@+id/item_settings_update_username"
-                android:icon="@drawable/img_right"
-                android:title="Username" />
-            <item
-                android:id="@+id/item_settings_update_aboutme"
-                android:icon="@drawable/img_right"
-                android:title="Aboutme" />
+                android:id="@+id/item_settings_update_userdata"
+                android:icon="@drawable/img_leftcorner"
+                android:title="User Informations" />
         </menu>
     </item>
 </menu>
