--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -80,10 +80,11 @@
         android:id="@+id/settings_frame"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="Settings frame"
         android:elevation="2dp"
         app:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout10" />
 </androidx.constraintlayout.widget.ConstraintLayout>
