--- a/app/src/main/res/layout/fragment_settings_update_pfp.xml
+++ b/app/src/main/res/layout/fragment_settings_update_pfp.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:clickable="true"
     android:background="@color/black"
     tools:context=".view.FragmentSettingsUpdatePfp">
 
@@ -26,7 +28,7 @@
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/img_back"
+            app:srcCompat="@drawable/img_right"
             app:tint="@color/white" />
 
         <TextView
