--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,8 +4,8 @@
         <item name="android:windowBackground">@color/black</item>
         <item name="android:textColor">@color/white</item>
         <item name="colorPrimary">@color/black</item>
+        <item name="colorSecondary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
-        <item name="buttonTint">@null</item>
         <item name="android:navigationBarColor">@color/black</item>
     </style>
 
@@ -13,8 +13,8 @@
         <item name="android:windowBackground">@color/black</item>
         <item name="android:textColor">@color/white</item>
         <item name="colorPrimary">@color/black</item>
+        <item name="colorSecondary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
-        <item name="buttonTint">@null</item>
         <item name="android:navigationBarColor">@color/black</item>
     </style>
 </resources>
